# diffusion2d

./: .gitignore  README.md  diffusion2d.py  pyproject.toml
d_test/: pyvenv.cfg
diffusion2d/: diffusion2d.py  output.py
schoenan_diffusion2d/: diffusion2d.py
schoenan_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
