#copy structur from https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schoenan_diffusion2d"
version = "0.0.4"
authors = [
    {name = "Aaron Schöne", email = "st183829@stud.uni-stuttgart.de"},
]
description = "This small Python project solves the two-dimensional diffusion (heat) equation on a square plate using a finite-difference scheme."
readme = "README.md"
requires-python = ">=3.6"
keywords = ["diffusion", "PDE", "finite-diffrence", "simulation"]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.1"
]

[tool.setuptools.packages.find]
include = ["diffusion2d*", "README.md"]
exclude = ["diffusion*"]